--- a/book-frontend/package.json
+++ b/book-frontend/package.json
@@ -12,6 +12,7 @@
     "react-daum-postcode": "^3.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
+    "react-js-pagination": "^3.0.3",
     "react-modal": "^3.15.1",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
