--- a/book-frontend/package.json
+++ b/book-frontend/package.json
@@ -44,5 +44,6 @@
       "last 1 safari version"
     ]
   },
+  "homepage": "https://balladin.netlify.app/",
   "proxy": "https://www.aladin.co.kr"
 }
